Minor updates to text; new filenames to match Canvas

--- a/python_labbanvisningar.qmd
+++ b/python_labbanvisningar.qmd
@@ -171,7 +171,7 @@ plot(penguins$bill_length_mm, penguins$bill_depth_mm)
 
 ### (f) Objektorienterad programmering
 
-R är ett "functional programming languange" som lämpar sig för att använda funktioner på funktioner, därav "pipe"-operatorn. Python tillåter "functional programming" men mycket Python-kod är skrivet som "Object Oriented Programming (OOP)" eller objektorienterad programmering på svenska. Tanken med objektorienterad programmering är att jobba så mycket som möjligt med objekt som har inbyggda variabler, ibland kallade fält, och funktioner, ibland kallade metoder. Ett annat kraftullt koncept inom objektorienterad programmering är arv: möjligheten för klasser att ärva från en superklass. Ni kan läsa mer om klasser [här](https://docs.python.org/3/tutorial/classes.html). "Functional programmin" är väldigt användbart för just statistik och data science, men OOP har stora fördelar i andra tillämpningar. I den här uppgiften är tanken att ni ska få en idé om fördelarna med OOP i en helt annan tillämpning än statistik/data science.
+R är ett "functional programming languange" som lämpar sig för att använda funktioner på funktioner, därav "pipe"-operatorn. Python tillåter "functional programming" men mycket Python-kod är skrivet som "Object Oriented Programming (OOP)" eller objektorienterad programmering på svenska. Tanken med objektorienterad programmering är att jobba så mycket som möjligt med objekt som har inbyggda variabler, ibland kallade fält, och funktioner, ibland kallade metoder. Ett annat kraftullt koncept inom objektorienterad programmering är arv: möjligheten för klasser att ärva från en superklass. Ni kan läsa mer om klasser [här](https://docs.python.org/3/tutorial/classes.html). "Functional programming" är väldigt användbart för just statistik och data science, men OOP har stora fördelar i andra tillämpningar. I den här uppgiften är tanken att ni ska få en idé om fördelarna med OOP i en helt annan tillämpning än statistik/data science.
 
 I den här uppgiften ska ni skriva objektorienterad kod. Er kod ska 
 
